5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2504.log
== TEST (2019-05-16 09:14:27) 
-- CODE:
qinicialvir=int(input("digite o numero:"))
qinicialleu=int(input("digite o numero:"))
pvir=float(input("digite o numero:"))
pleu=float(input("digite o numero:"))
pvir,pleu=pvir/100,pleu/100
dia=0
while(2*qinicialvir>qinicialleu):
	qinicialvir=qinicialvir+qinicialvir*pvir
	qinicialleu=qinicialleu+qinicialleu*pleu
	t=t+1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:15:22) 
-- CODE:
qinicialvir=int(input("digite o numero:"))
qinicialleu=int(input("digite o numero:"))
pvir=float(input("digite o numero:"))
pleu=float(input("digite o numero:"))
pvir,pleu=pvir/100,pleu/100
dia=0
while(2*qinicialvir>qinicialleu):
	qinicialvir=qinicialvir+qinicialvir*pvir
	qinicialleu=qinicialleu+qinicialleu*pleu
	dia=dia+1
print(dia)

-- EXECUTION TIME:
0.123164
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
